--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
 <hr>
 <b>공지사항</b><br>
 * EBSPod은 최근 한달간의 방송만을 제공합니다. 지난 방송은 EBS에서 구매바랍니다.<br>
-* 1월 11일부터 16일까지 서버 오류로 방송을 녹음하지 못했습니다. [2009-1-16] 
+* EBSPod은 개인적인 사용을 목적으로 만들었습니다. 외부유출은 삼가바랍니다.<br>
+* 3/2일은 서버오류와 방송시간 변경으로 녹음하지 못한 방송이 많습니다. [2009-3-3] 
 
 {% endblock %}
